# domain-graph-rag

./: .gitignore  README.md  config.py  engines.py  generate_questions.py  judge.py  kg_pipeline.py  llms.py  pyproject.toml  run_experiment.py
prompts/: entity_resolution.txt  extractor_prompt.txt  refinement.txt
results/: questions.jsonl
utils/: parse_utils.py  toc_utils.py  utils.py
